--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@ layout: compress
             </span>
             {% if site.footer and site.footer == 'Yes' or site.footer == 'yes' or site.footer == 'y' or site.footer == 'Y' %}<div
                 class="flex absolute mt-5 z-20 bottom-0 bg-black bg-opacity-50 w-full p-2 justify-center">Com tecnlogia
-                & &nbsp;<i class="fas fa-heart mt-1 mx-0.5 text-red-500"></i>&nbsp;by&nbsp;<a
+                 &nbsp;<i class="fas fa-heart mt-1 mx-0.5 text-red-500"></i>&nbsp;by&nbsp;<a
                     class="underline font-semibold" href="https://harsh98trivedi.github.io">TV RIO GRANDE PRODUÇÕES</a></div>{% endif %}
         </div>
     </div>
